# YWStore

./: .dockerignore  .env.example  .example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.local.yaml  docker-compose.yaml  entrypoint.sh  gitlab-ci.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 31162af444a7_initial_user_table.py  3c143cc5f200_initial.py  537cceb9cd38_init.py  6ac61ff5c45e_company_initial.py  98b6fe79e1d0_initial.py  98e025b30bf5_create_users_table.py  cdd3e167b267_added_association.py  cfccaf3935c3_users_initial.py  dfe92eae683f_users_initial.py  ff227fb94f88_company_added.py
src/: main.py
src/apps/company/: controller.py  depends.py  enums.py  models.py  repository.py  routes.py  schemas.py  service.py  validators.py
src/apps/employee/: controller.py  depends.py  models.py  repository.py  routes.py  schemas.py  service.py
src/apps/roles/: access.py  controller.py  depends.py  enums.py  exceptions.py  repository.py  routes.py  schemas.py  service.py  shemas.py
src/apps/users/: controller.py  depends.py  models.py  routes.py  schemas.py  service.py
src/core/: config.py  exceptions.py  http_response_schemas.py  interfaces.py  mixins.py  utils.py
src/core/auth/: access.py  strategy.py
src/core/sql/: __init__.py  database.py  models.py
src/core/users/: api.py  auth.py  depends.py  manager.py  models.py  routes.py  schemas.py  utils.py
src/permissions/: checker.py  depends.py  service.py  utils.py
src/settings/: defaults.py
src/tests/: conftest.py  defaults.py  helpers.py
src/tests/company/: conftest.py  test_company_views.py  test_crud_company.py  test_views_base.py  test_views_with_roles.py
src/tests/employee/: conftest.py  test_employees_views.py  test_views_base.py  test_views_with_roles.py
src/tests/roles/: conftest.py  test_roles_views.py
(+2 files in other folders)
