[tool.poetry]
name = "yshop"
version = "0.1.0"
description = "Diploma"
authors = ["Danil Fedorov"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pre-commit = "^3.4.0"
SQLAlchemy = "^2.0.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
