[tool.poetry]
name = "yshop"
version = "0.1.0"
description = "Diploma"
authors = ["Danil Fedorov"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pre-commit = "^3.4.0"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.23"}
alembic = "^1.12.1"
Werkzeug = "^3.0.1"
asyncpg = "^0.28.0"
asyncio = "^3.4.3"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max_line_length = 120
ignore = "E501,W6"  # or ["E501", "W6"]
in-place = true
recursive = true
aggressive = 3
diff = true
